--- a/project-mysql/.env.example
+++ b/project-mysql/.env.example
@@ -1,6 +1,11 @@
-CONNECTION='host name'
-PORT='port number'
-DB_NAME='database name'
-DB_USER='database username'
-DB_PASS='database password'
-CHARSET='charachter charset'
+CONNECTION='mysql host name'
+PORT='mysql port number'
+DB_MYSQL_NAME='mysql database name'
+DB_USER='mysql || mongo database username'
+DB_MYSQL_PASS='mysql database password'
+
+MONGO_CONN='mongo-atlas connection host'
+DB_MONGO_PASS='mongo database password'
+MONGO_PROJECT='mongo project name'
+DB_MONGO_NAME='mongo database name'
+OPTION='mongo database options'
