--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "app.js",
   "scripts": {
     "dev-mysql": "node --watch app --mysql",
-    "dev-mongo": "node --watch app --mongo",
-    "test": "mocha '**/**.spec.js'",
-    "coverage": "nyc --reporter=html --reporter=text npm run test"
+    "dev-mongo": "node --watch app --mongo"
   },
   "repository": {
     "type": "git",
@@ -20,14 +18,10 @@
   },
   "homepage": "https://github.com/brian-moretti/meditActive-node-project#readme",
   "dependencies": {
-    "chai": "^4.3.7",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mocha": "^10.2.0",
     "mongodb": "^6.3.0",
     "mysql2": "^3.7.0",
-    "nodemon": "^3.0.2",
-    "nyc": "^15.1.0",
-    "sinon": "^17.0.1"
+    "nodemon": "^3.0.2"
   }
 }
